@@ -8,6 +8,7 @@ export(folder)
 export(FT)
 export(GQ)
 export(html5)
+export(IM)
 export(LL)
 export(md2docx)
 export(md2tex)
@@ -30,6 +31,7 @@ export(textciteL)
 export(textciteM)
 export(update_bib)
 export(US)
+export(YT)
 import(gdata)
 import(slidify)
 S3method(print,reports)
